# rendu

./: Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
doc/: make_index.py
doc/pub_doc/: api_versions.txt  index.html
doc/pub_doc/archive/rendu_v0.1.2/: index.html
doc/pub_doc/archive/rendu_v0.1.2/rendu/: htmldeck.html
doc/pub_doc/archive/rendu_v6.6.7/: search.js
rendu/: htmldeck.py  pptdeck.py
rendu/misc/: html.py
rendu/report/: report_scripts.js
test/: penguins_example_ppt.py
